fixed off-centering in intro index pg

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -228,6 +228,7 @@ blockquote {
   #biography {
     margin: 0 auto;
     max-width: var(--main-content-biography);
+    margin-left: 15px;
   }
 
   #biography p {
